[package]
authors = [
   "Jonathan Pallant <jonathan.pallant@42technology.com>",
]
categories = ["embedded", "no-std"]
description = "BSP for the Actinius Icarus"
keywords = ["arm", "nrf9160"]
license = "MIT OR Apache-2.0"
readme = "README.md"
name = "actinius-icarus-bsp"
version = "0.1.0"
edition = "2018"

[dependencies]
nrf9160-hal = "0.10.0"

[dev-dependencies]
panic-halt = "0.2.0"
cortex-m-rt = "0.6.11"
nb = "0.1.1"
panic-semihosting = "0.5.1"
